# S-cad-budget-program

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: cad-lightweight-drawing-standard-zh.md  gui-v1-scope-zh.md  gui-v1-service-interface-zh.md  gui-v1-user-guide-zh.md  gui-v1-visual-design-brief-zh.md  project-status-zh.md  residential-quote-real-sample-validation-zh.md  residential-quote-real-template-review-zh.md  residential-quote-remaining-defaults-audit-zh.md  residential-quote-review-decision-table-zh.md  residential-quote-sample-cad-marker-checklist-zh.md  residential-quote-unit-price-workflow-zh.md
scripts/: assert_real_template_key_results.py  check_priced_quote_outputs.py  generate_marker_rich_quote_sample.py  run_real_acceptance.py  run_real_template_quote_review.py
src/cad_budget/: __init__.py  cad_adapter_models.py  cli.py  dwg_converter.py  dxf_adapter.py  export_excel.py  geometry.py  gui_app.py  gui_controller.py  gui_main_window.py  gui_services.py  gui_settings.py  import_excel.py  models.py  quantity.py  quote_excel.py  (+1 more)
tests/: test_cad_adapter_models.py  test_cli.py  test_dwg_converter.py  test_dxf_adapter.py  test_export_excel.py  test_geometry.py  test_gui_controller.py  test_gui_docs.py  test_gui_services.py  test_gui_settings.py  test_gui_skeleton.py  test_import_excel.py  test_models.py  test_priced_quote_outputs.py  test_quantity.py  test_quote_excel.py  test_quote_report.py  test_real_acceptance.py  test_real_template_key_results.py  test_real_template_quote_review_pipeline.py  test_residential_quote_cad_integration.py
(+11 files in other folders)
