[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cad-budget"
version = "0.1.0"
description = "CAD renovation quantity takeoff core"
requires-python = ">=3.11"
dependencies = [
  "ezdxf>=1.3.4",
  "openpyxl>=3.1.5",
  "pydantic>=2.8.0",
  "shapely>=2.0.4",
  "typer>=0.12.3"
]

[project.scripts]
cad-budget = "cad_budget.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cad_budget = ["config/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
